<resources>
    <string name="app_name">Buffet-UTN</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="emailHint">enter email here</string>
    <string name="passwordHint">enter password here</string>
    <string name="signupTitle">Log in to continue</string>
    <string name="welcomeTitle">Welcome to the first app by</string>
    <string name="or">OR</string>
    <string name="mainImgDesc">Buffet-UTN\'s logo</string>
    <string name="rememberme">Save \n info</string>
    <string name="emptyFormError">Empty field!</string>
    <string name="emailFormError">Not a valid email!</string>
    <string name="passwordMatchFormError">passwords do not match!</string>
    <string name="signupTitle2"> User\'s Sign up</string>
    <string name="DNI"> DNI </string>
    <string name="DNIHint">enter DNI here</string>
    <string name="rPassword"> reenter password</string>
    <string name="rPasswordHint"> reenter password here</string>
    <string name="signupSecTitle"> This is the sign up screen</string>
    <string name="sigunupThTitle"> Please, enter valid info</string>
    <string name="name"> Name</string>
    <string name="nameHint">enter name here</string>
    <string name="lastName"> Last name</string>
    <string name="lastNameHint">Enter last name here</string>
    <string name="username"> Username</string>
    <string name="usernameHint"> enter username here</string>
    <string name="loginAccessError"> email or password do not match</string>
    <string name="userAlreadyExistsError"> email or DNI already taken</string>
    <string name="buffetMenuTitle"> Make your order</string>
    <string name="myResume"> My order</string>
    <string name="estimatedTotal"> estimated total:</string>
    <string name="selectedItems"> selected items: </string>
    <string name="mainCourseOption"> main course</string>
    <string name="snacksOption"> snacks </string>
    <string name="drinksOption"> drinks </string>
    <string name="confirmOrder"> Confirm order </string>
    <string name="currencySimbol"> $ </string>
    <string name="noItemSelectedError">Select at least one product before going to your order detail </string>
    <string name="confirmOrderSuccess"> Your order has been send</string>
    <string name="selectedItemBody"> Item/s selected: </string>
    <string name="totalPriceBody"> Order Total: </string>
    <string name="logoutBar"> Log out </string>
    <string name="alertOk"> Awesome! </string>
    <string name="confirmOrderError"> Error Empty cart </string>
</resources>
