<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.juan.tplabv.menu.BuffetMenuActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buffetMenuTitle"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estimatedTotal"
            android:textSize="15sp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="35dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buffetmenu_my_resume"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/myResume"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="40dp"
        android:layout_gravity="center">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currencySimbol"
                android:textSize="25sp"
                android:gravity="center"/>
            <TextView
                android:id="@+id/buffetmenu_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:textSize="25sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/selectedItems"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="3dp"/>
            <TextView
                android:id="@+id/buffetmenu_total_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="0"
                android:layout_marginTop="3dp"
                android:layout_marginLeft="8dp"/>
            </LinearLayout>
        </LinearLayout>

        </LinearLayout>

    <android.support.design.widget.TabLayout
        android:id="@+id/buffetmenu_tabmenu"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp">

        <android.support.design.widget.TabItem
            android:id="@+id/buffetmenu_tab_maincourse"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/mainCourseOption">
        </android.support.design.widget.TabItem>

        <android.support.design.widget.TabItem
            android:id="@+id/buffetmenu_tab_snacks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/snacksOption">
        </android.support.design.widget.TabItem>

        <android.support.design.widget.TabItem
            android:id="@+id/buffetmenu_tab_drinks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/drinksOption">
        </android.support.design.widget.TabItem>

    </android.support.design.widget.TabLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/buffetmenu_menu_list"
        android:layout_marginLeft="10dp">

    </android.support.v7.widget.RecyclerView>


</LinearLayout>
