<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.juan.tplabv.order.OrderActivity">


<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/myResume"
    android:textSize="30dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="150dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/estimatedTotal"
            android:textSize="20dp"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/currencySimbol"
                android:textSize="20dp"
                android:layout_marginEnd="12dp"
                android:layout_gravity="center"/>
        <TextView
            android:id="@+id/order_totalprice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0.00"
            android:textSize="20dp"
            android:layout_gravity="center"/>
        </LinearLayout>
        <Button
            android:id="@+id/order_button_confirmorder"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:text="@string/confirmOrder"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_orange_light"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/order_recview"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>
